# CS3052-P02-Reductions

./: CMakeLists.txt  README.md
src/: Makefile  SAT.cpp  SAT.h  clause.cpp  clause.h  coltosat  main.cpp  main.h  parser.h  parserCNF.cpp  parserCNF.h  sattothreesat  threesattocol
src/Tests-CS3052-P2-Beta/Asattothreesat/: Makefile
src/Tests-CS3052-P2-Beta/Bcoltosat/: Makefile
src/Tests-CS3052-P2-Beta/Cthreesattocol/: Makefile  metatest-solution.sh  metatest-unsolvable.sh
src/formats/: COL.cpp  COL.h  SAT.cpp  SAT.h  clause.cpp  clause.h
src/parsers/: parserCNF.cpp  parserCNF.h  parserCOL.cpp  parserCOL.h
